--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Build Docker Image
+name: Build Docker Image Locally
 
 on:
   push:
@@ -7,11 +7,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
-
-    env:
-      DOCKER_IMAGE: username/donut-trainer:latest
 
     steps:
       - name: Checkout repository
@@ -23,17 +20,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-
-      - name: Build and push Docker image
+      - name: Build Docker image locally
         uses: docker/build-push-action@v4
         with:
-          push: true
-          tags: ${{ env.DOCKER_IMAGE }}
+          push: false
+          tags: donut-trainer:latest
           context: .
           file: Dockerfile
