--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,30 +1,29 @@
-name: Build Docker Image Locally
-
+name: Build and Push Docker Image
 
 on:
   push:
     branches:
-      - main
-  workflow_dispatch:
+      - main   # buduje przy pushu na main
+  workflow_dispatch:  # można uruchomić ręcznie z GitHub Actions
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build Docker image locally
-        uses: docker/build-push-action@v4
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
         with:
-          push: false
-          tags: donut-trainer:latest
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
           context: .
-          file: Dockerfile
+          push: true
+          tags: ghcr.io/wshoq/donutello:latest
